--- a/controller/Makefile
+++ b/controller/Makefile
@@ -1,9 +1,9 @@
 CFLAGS=-g
 
 all:
-	gcc -pthread server.c ml_model.c sockhelp.c -o controller
-	gcc -pthread balancer.c atomic.c sockhelp.c thread.c -o balancer
-	gcc client.c -o client
+	gcc -g -pthread server.c ml_model.c sockhelp.c -o controller
+	gcc -g -pthread balancer.c atomic.c sockhelp.c thread.c -o balancer
+	gcc -g client.c -o client
 
 clean:
 	-rm controller client balancer
