update flow function

--- a/controller/Makefile
+++ b/controller/Makefile
@@ -2,7 +2,7 @@ CFLAGS=-g
 
 all:
 	gcc -g -pthread server.c ml_model.c sockhelp.c -o controller
-	gcc -g -pthread balancer.c atomic.c sockhelp.c thread.c -o balancer
+	gcc -g -pthread balancer.c atomic.c sockhelp.c thread.c flow_function.c -o balancer
 	gcc -g client.c -o client
 
 clean:
