Creating user and server

--- a/controller/Makefile
+++ b/controller/Makefile
@@ -1,7 +1,7 @@
 CFLAGS=-g
 
 all:
-	gcc -g -pthread server.c ml_model.c vm_list.c sockhelp.c flow_function.c -o controller
+	gcc -g -pthread controller.c ml_model.c vm_list.c sockhelp.c flow_function.c -o controller
 	gcc -g -pthread balancer.c atomic.c vm_list.c sockhelp.c thread.c flow_function.c -o balancer
 	gcc -g client.c -o client
  	
